Applied review comments